# waimai

./: CMakeLists.txt  CMakeUserPresets.json  admin.cpp  admin.h  admin.ui  customer.cpp  customer.h  customer.ui  main.cpp  pic.qrc  qt.cpp  qt.h  regis.cpp  regis.h  search_restaurant.cpp  search_restaurant.h  search_restaurant.ui
